Fixed logo layout issues

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -35,9 +35,8 @@ header {
         margin-bottom: 50px;
         .logoHeader {
             .logo {
-                top: 53px;
-                left: -21px;
-                width: 150px;
+                top: 55px;
+                left: -36px;
             }
         }
     }
@@ -50,7 +49,7 @@ header {
         .logoHeader {
             .logo {
                 top: 70px;
-                left: -25px;
+                left: -58px;
                 height: 100px;
                 width: 300px;
             }
